components(OsitaIhemeVideo): fix layout shifting on initial load

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -22,6 +22,7 @@ html {
 }
 
 video {
+    vertical-align: middle;
     max-width: 100%;
     height: auto
 }
